# leqm-nrt

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_BUILD.md  GEMINI.md  Makefile  Makefile.am  Makefile.in  compile.docker.sh  compile.macos.sh  compile.ubuntu.sh  config.h  config.h.in  config.status  configure  configure.ac  mkdocs.yml
autom4te.cache/: output.0  traces.0  traces.1
benchmark/: bench_goqm.sh  bench_goqm_arm.sh  bench_leqm.sh  benchmark.sh  goqm_macos.2025-09-19.md  goqm_macos.2025-09-20.md  goqm_macos.2025-10-28.md  goqm_macos_arm.2025-09-19.md  goqm_macos_arm.2025-09-20.md  goqm_macos_arm.2025-10-28.md  leqm_macos.2025-09-19.md
docker/: Dockerfile.linux  Dockerfile.windows  README.md  STATUS.md  docker-compose.yml
docs/: allenmetric.md  benchmark.md  index.md
docs/builds/: index.md
docs/leqm/: algorithm.md  bs_1770.md  bs_2051.md  index.md  index.pre  iso_2004.md  iso_2005.md  iso_2015.md  iso_2016.md
examples/: short.m4a
golang/: compile.sh  go.mod  golang2  main.go
site/: 404.html  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
site/blog/: index.html
site/builds/: index.html
site/goqm/: index.html
site/leqm/: index.html
site/leqm/algorithm/: index.html
site/leqm/allenmetric/: index.html
site/leqm/bs_1770/: index.html
site/leqm/bs_2051/: index.html
site/leqm/iso_2004/: index.html
site/leqm/iso_2005/: index.html
site/leqm/iso_2015/: index.html
site/leqm/iso_2016/: index.html
site/search/: search_index.json
src/: Makefile  Makefile.am  Makefile.in  leqm-nrt.c
